# CS100-Final-Project

./: .gitignore  CMakeLists.txt  GenericTask.cpp  GenericTask.hpp  README.md  main.cpp  unit_tests.cpp
.github/workflows/: main.yml
TaskStructs/: DateStruct.hpp  TimeStruct.hpp
Tasks/: ParentTask.cpp  ParentTask.hpp  TaskType.hpp
Tasks/GenericTask/: GenericTask.cpp  GenericTask.hpp
Tasks/Homework/: .Homework.hpp.swp  Homework.cpp  Homework.hpp
Tasks/Meeting/: Meeting.cpp  Meeting.hpp
Tasks/Meetings/: Meetings.cpp  Meetings.hpp
Tasks/Shopping/: Shopping.cpp  Shopping.hpp
attributeClasses/: Date.hpp  Time.hpp
unitTests/Date/: date_constructor_tests.hpp  date_full_mutator_tests.hpp  date_mutator_tests.hpp  date_print_tests.hpp  date_tests.hpp
unitTests/GenericTask/: generictask_constructor_tests.hpp  generictask_mutator_tests.hpp  generictask_printallinfo_tests.hpp
unitTests/Homework/: homework_construct.hpp
unitTests/Meeting/: meeting_construct.hpp  meeting_mutator_tests.hpp  meeting_printallinfo_tests.hpp
unitTests/Meetings/: meetings_construct.hpp
unitTests/ParentTask/: parenttask_mutator_tests.hpp
unitTests/Shopping/: shopping_construct.hpp
unitTests/Time/: time_constructor_tests.hpp  time_mutator_tests.hpp  time_print_tests.hpp
